@@ -1,6 +1,9 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
 2012-06-11 Giuseppe Aruta (giuseppe_aruta@yahoo.it)
+  * Made a correction to bug on New BasicStyle file (to enable color chooser plugIn)
+
+2012-06-11 Giuseppe Aruta (giuseppe_aruta@yahoo.it)
   * Added code from SkyJUMP to enable color chooser plugIn
 
 2012-05-21 mmichaud <michael.michaud@free.fr>
